@@ -5,3 +5,11 @@ Two task completed
 Соглашение об именовании:
 Прикладное программирование - AppPro_LR№_textTask
 Системное программирование -SysPro_LR№_textTask
+
+По хорошему сценарию:
+mvn package - запуска сборщика проекта, в директории должен быть файл  pom.xml и src/, все остальное ошибка .gitignore
+Далее в IDEA нужно указать VM option, как показано ниже, для конфигруации 
+Если нужен .jar файл, смотри документацию к сборщику 
+
+VM option: --module-path "/home/redcrab/Public/javafx-sdk-11.0.2/lib/" --add-modules javafx.controls,javafx.fxml
+
